# django

./: .gitignore  pyproject.toml  sample.sh
.ssh/: known_hosts
docker/: Dockerfile_django-ads  docker-compose.yaml
service/downloader/downloader/: settings.py  urls.py
service/downloader/image_downloader/: apps.py  urls.py  views.py
service/downloader/image_downloader/download/: downloader.py  protocol.py
