[tool.poetry]
name = "django_sample"
version = "0.1.0"
description = ""
authors = ["hashimoto <ryuichi.hashimoto.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.9"
django = "^5.0.4"
requests = "^2.31.0"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 150


[tool.black]
line-length = 150
target-version = ['py38']
include = '\.pyi?$'

